# SycoMed

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  config.yaml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
core/: parser.py  plots.py  runner.py  scorer.py
data/: load_medqa.py
models/: base.py  ollama_adapter.py  openai_adapter.py
prompts/: pressures.py
tests/: test_parser.py  test_pipeline.py
